--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-  <title>Uber</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
+{% block head %}
+<title>ESAARI</title>
+{% endblock %}
 
-<body>
-  <h1>ESAARI</h1>
-  <div class='wrapper'>
-    <div class="box1">
-      <div class="vertical-center">
-        <button>Login</button>
-      </div>
-    </div>
-    <div class="box2">
-      <div class="vertical-center">
-        <button>Sign-up</button>
-      </div>
+{% block body %}
+<h1>ESAARI</h1>
+<div class='wrapper'>
+  <div class="box1">
+    <div class="vertical-center">
+      <a href="{{ url_for('login')}}"><button>Login</button></a>
     </div>
   </div>
-</body>
-
-</html>
+  <div class="box2">
+    <div class="vertical-center">
+      <a href="{{ url_for('create')}}"><button>Sign-up</button></a>
+    </div>
+  </div>
+</div>
+{% endblock %}
