--- a/templates/create.html
+++ b/templates/create.html
@@ -7,12 +7,12 @@
 {% block body %}
 <h1>CREATE ACCOUNT</h1>
 <div class="content">
-  <form action="/" method="POST" class="content" >
+  <form action="{{ url_for('createtwo')}}" method="POST" class="content" >
     <input type="text" name="name" id="name" placeholder="name">
     <input type="email" name="email" id="email" placeholder="email">
     <input type="password" name="password" id="password" placeholder="password">
     <input type="password" name="password_conf" id="password_conf" placeholder="confirm password">
-    <button type="submit" value="continue_login">CONTINUE</button>
+    <a href="{{ url_for('createtwo')}}"><button type="submit" value="continue_login">CONTINUE</button></a>
   </form>
   </div>
 {% endblock %}
