--- a/templates/create2.html
+++ b/templates/create2.html
@@ -8,11 +8,11 @@
 <h1>CREATE ACCOUNT</h1>
 <div class="content">
   <form action="/" method="POST" class="content" >
-    <input type="text" name="name" id="name" placeholder="name">
-    <input type="email" name="email" id="email" placeholder="email">
-    <input type="password" name="password" id="password" placeholder="password">
-    <input type="password" name="password_conf" id="password_conf" placeholder="confirm password">
-    <button type="submit" value="continue_login">CONTINUE</button>
+    <input type="text" name="cardname" id="cardname" placeholder="Cardholder's Name">
+    <input type="number" name="cardnumber" id="cardnumber" placeholder="Card Number">
+    <input type="date" name="expdate" id="expdate" placeholder="experation date">
+    <input type="number" name="cvc" id="cvc" placeholder="CVC">
+    <button type="submit" value="creatact">CREATE ACCOUNT</button>
   </form>
   </div>
 {% endblock %}
