--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,8 +42,19 @@ h1{
   border-style: solid;
   border-color: black;
   box-sizing: border-box;
-  
- 
+}
+.choosedriverbox {
+  position: relative;
+  width: 250px;
+  height: 100px;  
+  padding: 50px;
+  border-top: 3px;
+  border-bottom: 6px;
+  border-left: 6px;
+  border-right: 6px;
+  border-style: solid;
+  border-color: black;
+  box-sizing: border-box;
 }
 
 button{
