more redirects as rider

--- a/templates/potentialride.html
+++ b/templates/potentialride.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="content">
     <b>Welcome, Driver!</b>
-<form action="{{ url_for('potential_ride')}}" method="POST" class="content" >
+<form action="/" method="POST" class="content" >
     <b>Please set your current location:</b>
     <br>
     <input type="text" name="Current Location" id="driverStartingLocation" placeholder="Starting Location">
