--- a/templates/requestride.html
+++ b/templates/requestride.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="content">
-<form action="{{ url_for('potential_ride')}}" method="POST" class="content" >
+<form action="{{ url_for('selectdriver')}}" method="POST" class="content" >
     <b>Starting Location</b>
     <input type="text" name="Starting Location" id="riderStartingLocation" placeholder="starting location">
     <b>Ending Location</b>
