--- a/templates/riderconfirmation.html
+++ b/templates/riderconfirmation.html
@@ -2,6 +2,7 @@
 {% block head %}
 <title>CONFIRMATION</title> <!--This title shows up on the browser tab-->
 {% endblock %}
+{% block body %}
 <h1>ESAARI</h1>
 <h2>Driver has confirmed your ride</h2>
 <div class="wrapper">
