--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,8 @@
 
 <h1>LOGIN</h1>
 <div class="content">
-<form action="{{ url_for('loginnext')}}" method="POST" class="content" >
-  <input type="text" name="username" id="username" placeholder="username">
+<form action="{{ url_for('login')}}" method="POST" class="content" >
+  <input type="text" name="email" id="email" placeholder="username">
   <input type="text" name="password" id="password" placeholder="password">
   <button type="submit" value="continue_login">CONTINUE</button>
 </form>
