added Rate Buttons to riderconfirmation and driver confirmation

--- a/templates/riderconfirmation.html
+++ b/templates/riderconfirmation.html
@@ -15,8 +15,9 @@
       <h4>License Plate: LZ9999</h4>      
       <h4>Car Model: Honda Accord</h4>
       <h4>Car Color: Silver</h4>
-      
-    </div>
+
+      <input class="RateButton" type="submit" name="Rating"  value="RATE PASSENGER" style="font-size:16px;"/>
+</div>
   </div>
 
   {% endblock %}
