--- a/templates/driverconfirmation.html
+++ b/templates/driverconfirmation.html
@@ -11,7 +11,7 @@
       <h2>Destination: 1200 S Wacker Drive, Chicago, IL 60605</h2>
       <h2>Estimated Time to Destination: 36 min</h2>
       <h2>Earnings: $24.98</h2>
-
+      <input class="RateButton" type="submit" name="Rating"  value="RATE PASSENGER" style="font-size:16px;"/>
   </div>
 
   {% endblock %}
