updating buttons and css

--- a/templates/requestride.html
+++ b/templates/requestride.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+<h1>Request Ride</h1>
 <div class="content">
 <form action="{{ url_for('selectdriver')}}" method="POST" class="content" >
     <b>Starting Location</b>
