--- a/templates/riderconfirmation.html
+++ b/templates/riderconfirmation.html
@@ -16,7 +16,7 @@
       <h4>Car Model: Honda Accord</h4>
       <h4>Car Color: Silver</h4>
 
-      <input class="RateButton" type="submit" name="Rating"  value="RATE PASSENGER" style="font-size:16px;"/>
+      <input class="RateButton" type="submit" name="Rating"  value="RATE DRIVER" style="font-size:16px;"/>
 </div>
   </div>
 
