updating potential ride css

--- a/templates/potentialride.html
+++ b/templates/potentialride.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block body %}
+<h1>Welcome, Driver!</h1>
 <div class="content">
-    <b>Welcome, Driver!</b>
 <form action="/" method="POST" class="content" >
     <b>Please set your current location:</b>
     <br>
