adding payment alerts

--- a/templates/riderconfirmation.html
+++ b/templates/riderconfirmation.html
@@ -6,18 +6,20 @@
 <h1>ESAARI</h1>
 <h2>Driver has confirmed your ride</h2>
 <div class="wrapper">
-    <div class="vertical-center">
-      <h4>Your driver is: Cameron         ETA: 4 min</h4>
-      <h4>Ride Sharing is Enabled.</h4>
-      <h4>Pickup Location: 5910 S Clark St, Chicago, IL 60660 </h4>
-      <h4>Destination: 1200 S Wacker Drive, Chicago, IL 60605</h4>
-      <br>
-      <h4>License Plate: LZ9999</h4>      
-      <h4>Car Model: Honda Accord</h4>
-      <h4>Car Color: Silver</h4>
-
-      <input class="RateButton" type="submit" name="Rating"  value="RATE DRIVER" style="font-size:16px;"/>
-</div>
+  <div class="vertical-center">
+    <h4>Your driver is: Cameron         ETA: 4 min</h4>
+    <h4>Ride Sharing is Enabled.</h4>
+    <h4>Pickup Location: 5910 S Clark St, Chicago, IL 60660 </h4>
+    <h4>Destination: 1200 S Wacker Drive, Chicago, IL 60605</h4>
+    <br>
+    <h4>License Plate: LZ9999</h4>      
+    <h4>Car Model: Honda Accord</h4>
+    <h4>Car Color: Silver</h4>
+    <input class="RateButton" type="submit" name="Rating"  value="RATE DRIVER" style="font-size:16px;"/>
   </div>
+</div>
+<script type="text/javascript">
+  alert("Your account has been charged: $19.77");
+</script>
 
   {% endblock %}
