everything is linked

--- a/templates/choosedriver.html
+++ b/templates/choosedriver.html
@@ -6,7 +6,7 @@
 {% block body %}
 <h1>CHOOSE A DRIVER</h1>
 <div class= "wrapper">
-<form action="{{ url_for('confirmride')}}" method="POST" class="content">
+<form action="{{ url_for('selectdriver')}}" method="POST" class="content">
   <select size="5" class="driverlist">
     <option>Alex 4.7★    ETA:5 min    Ride Share Available    $14.34</option>
       <option>Cameron 5★    ETA:7 min    Ride Share Unavailable    $19.77</option>
