--- a/templates/riderconfirmation.html
+++ b/templates/riderconfirmation.html
@@ -15,7 +15,7 @@
     <h4>License Plate: LZ9999</h4>      
     <h4>Car Model: Honda Accord</h4>
     <h4>Car Color: Silver</h4>
-    <form action="{{ url_for('rateride')}}" method="POST" class="content" >
+    <form action="{{ url_for('confirmride')}}" method="POST" class="content" >
     <input class="RateButton" type="submit" name="Rating"  value="RATE DRIVER" style="font-size:16px;"/>
   </form>
   </div>
