--- a/templates/driverconfirmation.html
+++ b/templates/driverconfirmation.html
@@ -2,6 +2,7 @@
 {% block head %}
 <title>CONFIRMATION</title> <!--This title shows up on the browser tab-->
 {% endblock %}
+{% block body %}
 <h1>ESAARI</h1>
 <div class="wrapper">
     <h2>Your Passenger(s): Ellen, Paige</h2>
@@ -10,7 +11,7 @@
     <h2>Destination: 1200 S Wacker Drive, Chicago, IL 60605</h2>
     <h2>Estimated Time to Destination: 36 min</h2>
     <h2>Earnings: $24.98</h2>
-    <input class="RateButton" type="submit" name="Rating"  value="RATE PASSENGER" style="font-size:16px;"/>
+    
 </div>
 <script type="text/javascript">
   alert("Your account has been credited: $24.98");
