--- a/templates/requestride.html
+++ b/templates/requestride.html
@@ -7,6 +7,7 @@
 {% block body %}
 <h1>Request Ride</h1>
 <div class="content">
+  <div class = "wrapper">
 <form action="{{ url_for('selectdriver')}}" method="POST" class="content" >
     <b>Starting Location</b>
     <input type="text" name="Starting Location" id="riderStartingLocation" placeholder="starting location">
@@ -16,5 +17,6 @@
     <input type="number" name="Number of Passengers" id="passengerAmount" min="1" max = "4">
   <button type="submit" value="request_ride">Request Ride</button>
 </form>
+</div>
 </div>
 {% endblock %}
