--- a/templates/rateride.html
+++ b/templates/rateride.html
@@ -7,6 +7,7 @@
 {% block body %}
 <h1>Rate Your Driver</h1>
 <div class="content">
+    <div class = "wrapper">
 <form action="{{ url_for('')}}" method="POST" class="content" >
     <b>How would you rate your ride today?</b>
     <input type="radio" name="driverRideRating" value="1star">1
@@ -16,5 +17,6 @@
     <input type="radio" name="driverRideRating" value="5star">5
     <button type="submit" value="passengerRating">Submit</button>
 </form>
+</div>
 </div>
 {% endblock %}
