--- a/templates/potentialride.html
+++ b/templates/potentialride.html
@@ -5,22 +5,35 @@
 {% endblock %}
 
 {% block body %}
+<div class="content">
+    <div class = "wrapper">
+        <!--This button should lead to the driver account page-->
+      <form action="{{ url_for('driveraccount')}}" method="POST" class="content" >
+          <button type="submit" value="driveraccount">My Account</button>
+      </form>
+      <!--This button should lead to potential rides page (current page)-->
+      <form action="{{ url_for('potentialride')}}" method="POST" class="content" >
+          <button type="submit" value="choose_rider">Potential Rides</button> 
+      </form>
+    </div>
+  </div>
 <h1>Welcome, Driver!</h1>
 <div class="content">
     <div class = "wrapper">
-<form action="/" method="POST" class="content" >
-    <b>Please set your current location:</b>
-    <br>
-    <input type="text" name="Current Location" id="driverStartingLocation" placeholder="Starting Location">
-    <br>
-    <br>
-    <br>
-    <b>Please set the maximum radius you're willing to drive today:</b>
-    <br>
-    <input type="number" name="Driver Radius" id="driverRadius" placeholder="0">
-    <b>miles</b>
-    <button type="submit" value="driverLocation">Submit</button>
-</form>
-</div>
+    <form action="/" method="POST" class="content" >
+        <b>Please set your current location:</b>
+        <br>
+        <input type="text" name="Current Location" id="driverStartingLocation" placeholder="Starting Location">
+        <br>
+        <br>
+        <br>
+        <b>Please set the maximum radius you're willing to drive today:</b>
+        <br>
+        <input type="number" name="Driver Radius" id="driverRadius" placeholder="0">
+        <b>miles</b>
+        <br>
+        <button type="submit" value="driverLocation">Submit</button>
+    </form>
+    </div>
 </div>
 {% endblock %}
