--- a/templates/requestride.html
+++ b/templates/requestride.html
@@ -5,6 +5,18 @@
 {% endblock %}
 
 {% block body %}
+<div class="content">
+  <div class = "wrapper">
+      <!--This button should lead to the rider account page-->
+	<form action="{{ url_for('rideraccount')}}" method="POST" class="content" >
+		<button type="submit" value="rideraccount">My Account</button>
+	</form>
+    <!--This button should lead to the Request Ride page (current page)-->
+	<form action="{{ url_for('requestride')}}" method="POST" class="content" >
+		<button type="submit" value="request_ride">Request Ride</button>
+	</form>
+  </div>
+</div>
 <h1>Request Ride</h1>
 <div class="content">
   <div class = "wrapper">
