its linked with accounts

--- a/templates/driveraccount.html
+++ b/templates/driveraccount.html
@@ -7,17 +7,14 @@
 {% block body %}
 <div class="content">
   <div class = "wrapper">
-      <!--This button should lead to the driver account page (current page)-->
-	<form action="{{ url_for('driveraccount')}}" method="POST" class="content" >
-		<button type="submit" value="driveraccount">My Account</button>
-	</form>
+  
     <!--This button should lead to potential rides page (where they set starting address and radius)-->
-	<form action="{{ url_for('potentialride')}}" method="POST" class="content" >
+	<form action="{{ url_for('driveraccount')}}" method="POST" class="content" >
 		<button type="submit" value="choose_rider">Potential Rides</button> 
 	</form>
   </div>
 </div>
-<h1>Rider Account</h1>
+<h1>Driver Account</h1>
 <div class="content">
 <div class="wrapper">
   <div class="vertical-center">
