--- a/templates/potentialride.html
+++ b/templates/potentialride.html
@@ -8,19 +8,16 @@
 <div class="content">
     <div class = "wrapper">
         <!--This button should lead to the driver account page-->
-      <form action="{{ url_for('driveraccount')}}" method="POST" class="content" >
-          <button type="submit" value="driveraccount">My Account</button>
+      <form action="{{ url_for('potential')}}" method="POST" class="content" >
+        <button type="submit" name="dr" value="dr">My Account</button>
       </form>
-      <!--This button should lead to potential rides page (current page)-->
-      <form action="{{ url_for('potentialride')}}" method="POST" class="content" >
-          <button type="submit" value="choose_rider">Potential Rides</button> 
-      </form>
+      
     </div>
   </div>
 <h1>Welcome, Driver!</h1>
 <div class="content">
     <div class = "wrapper">
-    <form action="/" method="POST" class="content" >
+    <form action="{{ url_for('potential')}}" method="POST" class="content" >
         <b>Please set your current location:</b>
         <br>
         <input type="text" name="Current Location" id="driverStartingLocation" placeholder="Starting Location">
@@ -32,7 +29,7 @@
         <input type="number" name="Driver Radius" id="driverRadius" placeholder="0">
         <b>miles</b>
         <br>
-        <button type="submit" value="driverLocation">Submit</button>
+        <button type="submit" name="driverLocation" value="driverLocation">View Potential Rides</button>
     </form>
     </div>
 </div>
