--- a/templates/rateride.html
+++ b/templates/rateride.html
@@ -8,7 +8,7 @@
 <h1>Rate Your Driver</h1>
 <div class="content">
     <div class = "wrapper">
-<form action="{{ url_for('')}}" method="POST" class="content" >
+<form action="{{ url_for('ratedriver')}}" method="POST" class="content" >
     <b>How would you rate your ride today?</b>
     <input type="radio" name="driverRideRating" value="1star">1
     <input type="radio" name="driverRideRating" value="2star">2
