last minute updates

--- a/templates/driveraccount.html
+++ b/templates/driveraccount.html
@@ -18,7 +18,7 @@
 <div class="content">
 <div class="wrapper">
   <div class="vertical-center">
-    <h4>Name: Driver</h4>
+    <h4>Name: MARY</h4>
     <h4>Payment Receipt Method: Credit Card</h4>
     <h4>Rides given: 1</h4>
     <h4>Amount Earned: $24.44</h4>
