--- a/templates/rideraccount.html
+++ b/templates/rideraccount.html
@@ -18,7 +18,7 @@
 <div class="content">
 <div class="wrapper">
   <div class="vertical-center">
-    <h4>Name: Rider</h4>
+    <h4>Name: ESTEFANIA</h4>
     <h4>Payment Method: Credit Card</h4>
     <h4>Rides taken: 1</h4>
     <h4>Amount Spent: $19.44</h4>
