--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 <h1>LOGIN</h1>
 <div class="content">
 <form action="{{ url_for('login')}}" method="POST" class="content" >
-  <input type="text" name="email" id="email" placeholder="username">
+  <input type="text" name="email" id="email" placeholder="email">
   <input type="password" name="password" id="password" placeholder="password">
   <button type="submit" value="continue_login">CONTINUE</button>
 </form>
